0.8.0    2012-12-04
  * Patch from Marc Brooker: avoid overflowing stack when
    allocating array for mincore() output
  * Patch from Federico Lucifredi: Avoid ugly NaNs in output
  * Full OS X support: msync(2) evicts pages on this system
  * HP-UX support from Shane Seymour (thanks!)
  * Patch from soarpenguin: detect invalid size formats

0.7.3
  * Solaris support for page eviction

0.7.2
  * Portability fixes

0.7.1
  * First public release